--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <title>Sunset Hoops</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./styles.css" />
-  
-	<script type="module" src="logos.js"></script>
-	<script type="module" src="app.js"></script>
-
-</head>
-<body>
-  <header class="sh-header">
-    <img src="./logo.png" alt="Sunset Hoops" class="sh-logo" />
-    <h1>Sunset Hoops</h1>
-  </header>
-
-  <!-- Navigation par onglets -->
-  <nav class="sh-tabs" role="tablist" aria-label="Sections Sunset Hoops">
-    <button class="sh-tab is-active" data-tab="scores" role="tab" aria-selected="true">Scores</button>
-    <button class="sh-tab" data-tab="teams" role="tab" aria-selected="false">Équipes</button>
-    <button class="sh-tab" data-tab="players" role="tab" aria-selected="false">Joueurs</button>
-    <button class="sh-reload" id="reloadBtn" title="Recharger les données">↻</button>
-  </nav>
-
-  <!-- États globaux -->
-  <div id="globalStatus" class="sh-status" aria-live="polite"></div>
-
-  <!-- Sections -->
-  <main class="sh-main">
-    <section id="section-scores" class="sh-section" role="tabpanel" aria-labelledby="tab-scores"></section>
-    <!-- Barre de recherche -->
-<div class="sh-search">
-  <input type="text" id="playerSearch" placeholder="Rechercher un joueur..." />
-  <input type="text" id="teamSearch" placeholder="Rechercher une équipe..." />
-
-  <!-- Filtre par date -->
-  <input type="date" id="gameDate" />
-  <button id="filterDateBtn">Filtrer</button>
-</div>
-
-
-<section id="section-teams" class="sh-section is-hidden" role="tabpanel" aria-labelledby="tab-teams"></section>
-    <section id="section-players" class="sh-section is-hidden" role="tabpanel" aria-labelledby="tab-players"></section>
-  </main>
-
-  <footer class="sh-footer">
-    <small>© Sunset Hoops</small>
-  </footer>
-</body>
-</html>
+<html><head><script type='module' src='src/app.js'></script></head><body></body></html>
